--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,12 +7,12 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://download.meizu.com/Firmware/Flyme/16/9.21.6.29/cn_beta/20210629130643/2941e0a7/update.zip'
-  ZIP_NAME: 'update.zip'
-  OS_TYPE: 'Flyme'
+  ROM_URL: 'https://nchc.dl.sourceforge.net/project/crdroid/jason/7.x/crDroidAndroid-11.0-20211110-jason-v7.12.zip'
+  ZIP_NAME: 'crDroidAndroid-11.0-20211110-jason-v7.12.zip'
+  OS_TYPE: 'Generic'
   BUILD_TYPE: 'ab'
   REPACK_NAME: 'SGSI.zip'
-  VERSION: '10'
+  VERSION: '11'
   upload_action-gh-release: 'true'
   SETUP: 'true'
   
