--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,12 +7,12 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://nchc.dl.sourceforge.net/project/crdroid/jason/7.x/crDroidAndroid-11.0-20211110-jason-v7.12.zip'
-  ZIP_NAME: 'crDroidAndroid-11.0-20211110-jason-v7.12.zip'
-  OS_TYPE: 'Generic'
+  ROM_URL: 'https://bigota.d.miui.com/V12.5.7.0.QFGCNXM/miui_LAVENDER_V12.5.7.0.QFGCNXM_10b2f7da11_10.0.zip'
+  ZIP_NAME: 'miui_LAVENDER_V12.5.7.0.QFGCNXM_10b2f7da11_10.0.zip'
+  OS_TYPE: 'MIUI'
   BUILD_TYPE: 'ab'
   REPACK_NAME: 'SGSI.zip'
-  VERSION: '11'
+  VERSION: '10'
   upload_action-gh-release: 'true'
   SETUP: 'true'
   
